# unlearun

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: test_unlearning.py
unlearun/: __init__.py  core.py
unlearun/data/: __init__.py  collators.py  dataset.py
unlearun/evaluation/: __init__.py  metrics.py
unlearun/methods/: __init__.py  base.py  dpo.py  grad_ascent.py  grad_diff.py  rmu.py  simnpo.py
unlearun/trainer/: __init__.py  trainer.py
unlearun/utils/: __init__.py  helpers.py  losses.py
